<resources>
    <string name="app_name">Esdeveniments València</string>
    <string name="campUsuari">Usuari</string>
    <string name="campContrasenya">Contrasenya</string>
    <string name="campNom">Nom</string>
    <string name="campCognoms">Cognoms</string>
    <string name="campEdad">Edat</string>
    <string name="campEmail">Correu electrònic</string>
    <string name="botonEntrar">Entrada</string>
    <string name="botonRegistrar">Registrar</string>
    <string name="loading">Carregant...</string>
    <string name="emptyFileds">Els camps no poden quedar buits</string>
    <string name="passwordIncorrect">La contrasenya no és correcta</string>
    <string name="userNotExist">L\'usuari no existeix</string>
    <string name="userNotRegistre">No hi ha usuaris registrats</string>
    <string name="connection">No hi ha connexió de xarxa</string>
    <string name="successRegistre">Ja estàs registrat!</string>
    <string name="notRegistre">No s\'ha registrat</string>
    <string name="titleEsdev">PRÓXIMS ESDEVEN.</string>
    <string name="titleLlocs">LLOCS D\'INTERÉS</string>
    <string name="titleInteresa">T\'INTERESA</string>
    <string name="titleCompte">EL MEU COMPTE</string>
    <string name="changePass">Canviar contrasenya</string>
    <string name="save">Desar</string>
    <string name="direction_not_found">L\'esdeveniment no té una direcció assignada</string>
    <string name="unknown_place">Lloc desconegut</string>
    <string name="unknown_events">No hi ha esdeveniments disponibles</string>
    <string name="principal">Principal</string>
    <string name="arrive">Com arribar-hi?</string>
    <string name="infoLloc">Info. Del lloc</string>
    <string name="category">Categoria:</string>
    <string name="more"><u>Llegir més</u></string>
    <string name="less"><u>Llegir menys</u></string>
    <string name="suscription">Subscripció realitzada amb èxit!</string>
    <string name="not_suscription">No s\'ha subscrit a l\'esdeveniment</string>
    <string name="cancelEvent"><u>Si voleu cancel·lar premi aquí</u></string>
    <string name="map">Anar al mapa</string>
    <string name="sinOut">Tancar sessió</string>
    <string name="update">Modificació realitzada</string>
</resources>
