<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anabel.esdevenimentsvalencia.activities.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_activity"
        android:alpha="0.7"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/top_image"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo_android"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottomLayout"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/imageCalendar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/camps"
                app:srcCompat="@drawable/calendario_white"/>

            <TextView
                android:id="@+id/titleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titleEsdev"
                android:textColor="@color/colorHintWhite"
                android:textSize="@dimen/titles"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="@dimen/layout"/>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="8dp"
                android:background="@color/colorBarra">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/universal"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/imageLlocs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/camps"
                app:srcCompat="@drawable/marcador_mapa_white"/>

            <TextView
                android:id="@+id/titleLlocs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titleLlocs"
                android:textColor="@color/colorHintWhite"
                android:textSize="@dimen/titles"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="@dimen/layout"/>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="8dp"
                android:background="@color/colorBarra">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_image"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageInteresa"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/camps"
                app:srcCompat="@drawable/interesa_white" />

            <TextView
                android:id="@+id/titleInteresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout"
                android:layout_gravity="center"
                android:text="@string/titleInteresa"
                android:textColor="@color/colorHintWhite"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="@dimen/titles" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="8dp"
                android:background="@color/colorBarra">

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/universal"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/imageCompte"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/camps"
                app:srcCompat="@drawable/compte_white"/>

            <TextView
                android:id="@+id/titleCompte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titleCompte"
                android:textColor="@color/colorHintWhite"
                android:textSize="@dimen/titles"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="@dimen/layout"/>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="8dp"
                android:background="@color/colorBarra">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
